# website

./: .gitignore  Website.cabal  index.html  publications.html  site.hs
agda-posts/: literate-agda.lagda.md
css/: default.css
files/: AIMXXIX.html  Edit-time-tactics-for-Agda.html  TYPES2019.html  theme.css
files/overlapping/: OverlappingDemo.agda
files/public-defence/: cooking.agda  dependent-cooking.agda
files/without-K/: Examples.agda  Fail.agda  NewWithoutK-2014-03-05.dpatch  index.html  newWithoutK-2014-01-21.dpatch
pages/: links.markdown
posts/: agdas-new-sorts.md  elaborating-dependent-copattern-matching.md
publications/: definitional-proof-irrelevance-without-k.markdown  elaborating-dependent-copattern-matching.markdown  expressive-and-strongly-type-safe-code-generation-abstract.markdown  expressive-and-strongly-type-safe-code-generation.markdown  higher-dimensional-unification.markdown  how-to-tame-your-rewrite-rules.markdown  leibniz-equality.markdown  master-thesis.markdown  overlapping-and-order-independent-patterns.markdown  pattern-matching-without-K.markdown  proof-relevant-unification.markdown  sprinkles-of-extensionality.markdown  thesis.markdown  towards-a-directed-hott.markdown  unifiers-as-equivalences.markdown  vectors-are-records-too.markdown  without-K-journal.markdown
talks/: AIMXIX.markdown  AIMXXI.markdown  AIMXXII.markdown  AIMXXIII.markdown  AIMXXIX.markdown  GSTTS2.markdown  UNIF2017.markdown  edit-time-tactics.markdown
templates/: default.html  post.html
